small adition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My first page</title>
+	<title>Hello coursera</title>
 </head>
 <body>
-<h1>My first page</h1>
+<h1>Hello Coursera hola q hace</h1>
 </body>
 </html>
